# open_spiel_w_papers

./: .gitignore  README.md  compile_pscfr.sh  install_pscfr.sh
open_spiel/: CMakeLists.txt
open_spiel/algorithms/: bandits.cc  cfr.cc  infostate_tree.cc  infostate_tree.h
open_spiel/games/: liars_dice.cc  liars_dice.h
open_spiel/papers_with_code/public_state_cfr/: CMakeLists.txt  README.md  my_main.cc  subgame.cc  subgame.h  test_observer_liars_dice.cc
